--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,6 @@
 </ion-header>
 
 <ion-content padding>
-
+O Guia Porteirinha é uma iniciativa da Olímpio Comunicação com o objetivo de facilitar o acesso a informações do comércio de Porteirinha.
+Você tem informações de endereço e telefones sempre com você.
 </ion-content>
