--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tabGuia" tabTitle="Guia" tabIcon="home"></ion-tab>
   <ion-tab [root]="tabAnuncie" tabTitle="Anuncie" tabIcon="megaphone"></ion-tab>
+    <ion-tab [root]="AboutPage" tabTitle="About" tabIcon="megaphone"></ion-tab>
 </ion-tabs>
