--- a/src/pages/guia/guia.html
+++ b/src/pages/guia/guia.html
@@ -3,8 +3,37 @@
     <ion-title>Guia</ion-title>
   </ion-navbar>
 </ion-header>
-
+<ion-menu [content]="content">
+    <ion-header>
+      
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <button ion-item (click)="openPage(homePage)">
+          Home
+        </button>
+        <button ion-item (click)="abrirSobre()">
+          Sobre
+        </button>
+        <button ion-item (click)="abrirAnuncie()">
+          Anuncie
+        </button>
+        <button ion-item (click)="abrirEmpresas()">
+           Empresas Premium
+          </button>
+        <button ion-item (click)="closeMenu()">
+          Close Menu
+        </button>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  
+  <ion-nav id="nav" #content [root]="rootPage"></ion-nav>
 <ion-content padding>
+    <img src="assets/images/logoapp.png"/>
   <ion-searchbar (ionInput)="getBtns($event)"></ion-searchbar>
   <button (click)="getPage(btn.name, btn.category)"  ion-button full *ngFor="let btn of btns">
     {{ btn.name }}
